refactor: Modernize Strategy pattern implementation with 2025 best practices
Major improvements to both SalaryCalculator and ShippingStrategyExercise:

## Core Design Improvements
- Remove description parameters from PayrollProcessor and ShippingCalculator
- Add default constructors with default strategies (SALARIED, STANDARD)
- Simplify API to single setCalculator/setStrategy methods
- Extract appendIfPresent helper method to eliminate code duplication

## Modern Java Features
- Use var keyword throughout for local variable type inference
- Replace String.format() with String.formatted() for cleaner syntax
- Add proper imports for List and Map collections
- Eliminate unused getter methods and factory methods

## Enhanced Educational Value
- Add realistic batch processing with parallel streams
- Implement strategy registries with Map<String, Function<PayrollData, Double>>
- Show practical payroll/shipping processing for multiple items
- Demonstrate modern functional programming with design patterns

## Code Quality
- Rename StrategyEmployee to PayrollEmployee to avoid conflicts
- Rename consultantRate to calculateConsultantPay for clarity
- Reduce SalaryCalculator from 270 to ~220 lines (remove demo bloat)
- Consistent error handling and validation throughout

## Batch Processing Features
- Process multiple employees/packages in parallel using parallelStream()
- Strategy maps for dynamic strategy selection
- Realistic business scenarios with mixed employee/package types
- Performance-oriented design suitable for production systems

Both examples now demonstrate modern Strategy pattern usage combining:
- Lambda expressions and method references
- Parallel stream processing
- Clean API design
- 2025 Java best practices

Ready for video recording with consistent, professional examples.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>