@@ -1,5 +1,5 @@
 import java.time.LocalDate;
-import java.time.Period;
+import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 
@@ -8,7 +8,7 @@ import java.util.function.Function;
 
 // Data container for payroll information
 record PayrollData(
-        StrategyEmployee employee,
+        PayrollEmployee employee,
         Integer hoursWorked,
         Double salesAmount,
         Double hourlyRate,
@@ -16,21 +16,22 @@ record PayrollData(
         Double baseSalary,
         Double commissionRate
 ) {
-    
+
     // Constructor for hourly workers
-    public PayrollData(StrategyEmployee employee, int hoursWorked, double hourlyRate) {
+    public PayrollData(PayrollEmployee employee, int hoursWorked, double hourlyRate) {
         this(employee, hoursWorked, null, hourlyRate,
                 null, null, null);
     }
-    
+
     // Constructor for salaried workers
-    public PayrollData(StrategyEmployee employee, double annualSalary) {
+    public PayrollData(PayrollEmployee employee, double annualSalary) {
         this(employee, null, null,
                 null, annualSalary, null, null);
     }
-    
+
     // Constructor for commission workers
-    public PayrollData(StrategyEmployee employee, double salesAmount, double baseSalary, double commissionRate) {
+    public PayrollData(PayrollEmployee employee, double salesAmount,
+                       double baseSalary, double commissionRate) {
         this(employee, null, salesAmount, null,
                 null, baseSalary, commissionRate);
     }
@@ -38,16 +39,16 @@ record PayrollData(
 
 // Modern Strategy Pattern using static methods and lambdas
 class PayrollCalculations {
-    
+
     // Standard hourly calculation with overtime
     public static final Function<PayrollData, Double> HOURLY = data -> {
         if (data.hoursWorked() == null || data.hourlyRate() == null) {
             throw new IllegalArgumentException("Hours worked and hourly rate required");
         }
-        
+
         int hours = data.hoursWorked();
         double rate = data.hourlyRate();
-        
+
         if (hours <= 0) return 0.0;
         if (hours <= 40) {
             return hours * rate;
@@ -55,7 +56,7 @@ class PayrollCalculations {
             return (40 * rate) + ((hours - 40) * rate * 1.5); // 1.5x overtime
         }
     };
-    
+
     // Salaried calculation (bi-weekly)
     public static final Function<PayrollData, Double> SALARIED = data -> {
         if (data.annualSalary() == null) {
@@ -63,7 +64,7 @@ class PayrollCalculations {
         }
         return data.annualSalary() / 26; // Bi-weekly
     };
-    
+
     // Commission-only calculation
     public static final Function<PayrollData, Double> COMMISSION = data -> {
         if (data.salesAmount() == null || data.commissionRate() == null) {
@@ -71,7 +72,7 @@ class PayrollCalculations {
         }
         return data.salesAmount() * data.commissionRate();
     };
-    
+
     // Base salary plus commission (for sales people)
     public static final Function<PayrollData, Double> BASE_PLUS_COMMISSION = data -> {
         if (data.baseSalary() == null || data.salesAmount() == null || data.commissionRate() == null) {
@@ -79,29 +80,17 @@ class PayrollCalculations {
         }
         return data.baseSalary() + (data.salesAmount() * data.commissionRate());
     };
-    
-    // Custom strategy factory for complex scenarios
-    public static Function<PayrollData, Double> customStrategy(
-            String description, Function<PayrollData, Double> calculation) {
-        return calculation; // Could add logging, validation, etc.
-    }
+
 }
 
 // Modern context class using Function-based strategies
 class PayrollProcessor {
-    private Function<PayrollData, Double> payCalculator;
-    private String calculatorDescription;
-    
-    public PayrollProcessor(Function<PayrollData, Double> payCalculator, String description) {
+    private Function<PayrollData, Double> payCalculator = PayrollCalculations.SALARIED; // Default strategy
+
+    public void setCalculator(Function<PayrollData, Double> payCalculator) {
         this.payCalculator = payCalculator;
-        this.calculatorDescription = description;
     }
-    
-    public void setCalculator(Function<PayrollData, Double> payCalculator, String description) {
-        this.payCalculator = payCalculator;
-        this.calculatorDescription = description;
-    }
-    
+
     public double processPayroll(PayrollData payrollData) {
         if (payrollData == null || payrollData.employee() == null) {
             throw new IllegalArgumentException("Payroll data and employee cannot be null");
@@ -109,181 +98,124 @@ class PayrollProcessor {
         if (payCalculator == null) {
             throw new IllegalStateException("Pay calculator not set");
         }
-        
+
         return payCalculator.apply(payrollData);
     }
-    
+
     public String getPayrollSummary(PayrollData payrollData) {
         double pay = processPayroll(payrollData);
-        StringBuilder summary = new StringBuilder();
-        summary.append(String.format("Employee: %s%n", payrollData.employee().name()));
-        summary.append(String.format("Calculation Type: %s%n", calculatorDescription));
-        
-        if (payrollData.hoursWorked() != null) {
-            summary.append(String.format("Hours Worked: %d%n", payrollData.hoursWorked()));
-        }
-        if (payrollData.hourlyRate() != null) {
-            summary.append(String.format("Hourly Rate: $%.2f%n", payrollData.hourlyRate()));
-        }
-        if (payrollData.annualSalary() != null) {
-            summary.append(String.format("Annual Salary: $%.2f%n", payrollData.annualSalary()));
-        }
-        if (payrollData.salesAmount() != null) {
-            summary.append(String.format("Sales Amount: $%.2f%n", payrollData.salesAmount()));
-        }
-        if (payrollData.baseSalary() != null) {
-            summary.append(String.format("Base Salary: $%.2f%n", payrollData.baseSalary()));
-        }
+        var summary = new StringBuilder();
+        summary.append("Employee: %s%n".formatted(payrollData.employee().name()));
+
+        appendIfPresent(summary, "Hours Worked: %d%n", payrollData.hoursWorked());
+        appendIfPresent(summary, "Hourly Rate: $%.2f%n", payrollData.hourlyRate());
+        appendIfPresent(summary, "Annual Salary: $%.2f%n", payrollData.annualSalary());
+        appendIfPresent(summary, "Sales Amount: $%.2f%n", payrollData.salesAmount());
+        appendIfPresent(summary, "Base Salary: $%.2f%n", payrollData.baseSalary());
         if (payrollData.commissionRate() != null) {
-            summary.append(String.format("Commission Rate: %.1f%%%n", payrollData.commissionRate() * 100));
+            summary.append("Commission Rate: %.1f%%%n".formatted(payrollData.commissionRate() * 100));
         }
-        
-        summary.append(String.format("Pay Amount: $%.2f", pay));
+
+        summary.append("Pay Amount: $%.2f".formatted(pay));
         return summary.toString();
     }
-    
-    public Function<PayrollData, Double> getCalculator() {
-        return payCalculator;
-    }
-    
-    public String getCalculatorDescription() {
-        return calculatorDescription;
+
+    // Helper method to reduce repetitive null checks
+    private <T> void appendIfPresent(StringBuilder sb, String format, T value) {
+        if (value != null) {
+            sb.append(format.formatted(value));
+        }
     }
 }
 
 // Simple Employee class for strategy pattern demo
-record StrategyEmployee(String name, int id, LocalDate hireDate) {
-
-    public int getYearsOfService() {
-        return Period.between(hireDate, LocalDate.now()).getYears();
-    }
+record PayrollEmployee(String name, int id, LocalDate hireDate) {
 }
 
 // Demo class showing modern lambda-based Strategy pattern
 class StrategyPatternDemo {
     public static void main(String[] args) {
         System.out.println("=== Modern Strategy Pattern Demo (2025) ===");
-        
-        // Create employees
-        var hourlyEmployee = new StrategyEmployee("Alice Johnson", 1001, LocalDate.of(2020, 3, 15));
-        var salariedEmployee = new StrategyEmployee("Bob Smith", 1002, LocalDate.of(2019, 7, 22));
-        var salesPerson = new StrategyEmployee("Carol Sales", 1003, LocalDate.of(2021, 12, 1));
-        var customEmployee = new StrategyEmployee("Dave Custom", 1004, LocalDate.of(2022, 1, 15));
-        
-        // Create payroll processor with lambda strategies
-        System.out.println("\n--- Standard Strategies (Predefined Lambdas) ---");
-        
-        // Hourly worker
-        var processor = new PayrollProcessor(PayrollCalculations.HOURLY, "Hourly with Overtime");
+
+        // Create test employees
+        var hourlyEmployee = new PayrollEmployee("Alice Johnson", 1001, LocalDate.of(2020, 3, 15));
+        var salariedEmployee = new PayrollEmployee("Bob Smith", 1002, LocalDate.of(2019, 7, 22));
+        var salesEmployee = new PayrollEmployee("Carol Sales", 1003, LocalDate.of(2021, 12, 1));
+        var consultantEmployee = new PayrollEmployee("Dave Consultant", 1004, LocalDate.of(2022, 8, 10));
+
+        var processor = new PayrollProcessor();
+
+        // 1. Predefined lambda strategies
+        System.out.println("\n--- 1. Hourly with Overtime ---");
+        processor.setCalculator(PayrollCalculations.HOURLY);
         var hourlyData = new PayrollData(hourlyEmployee, 45, 25.0); // 45 hours at $25/hour
         System.out.println(processor.getPayrollSummary(hourlyData));
-        
-        System.out.println("\n--- Salaried Employee ---");
-        processor.setCalculator(PayrollCalculations.SALARIED, "Salaried (Bi-weekly)");
+
+        System.out.println("\n--- 2. Salaried ---");
+        processor.setCalculator(PayrollCalculations.SALARIED);
         var salariedData = new PayrollData(salariedEmployee, 80000.0); // $80k annual
         System.out.println(processor.getPayrollSummary(salariedData));
-        
-        System.out.println("\n--- Sales Person (Base + Commission) ---");
-        processor.setCalculator(PayrollCalculations.BASE_PLUS_COMMISSION, "Base Salary + Commission");
-        var salesData = new PayrollData(salesPerson, 15000.0, 40000.0, 0.08); // $15k sales, $40k base, 8%
-        System.out.println(processor.getPayrollSummary(salesData));
-        
-        System.out.println("\n--- Custom Strategy (Lambda Expression) ---");
-        
-        // Custom strategy: Senior sales rep with tiered commission
-        Function<PayrollData, Double> seniorSalesStrategy = data -> {
-            if (data.baseSalary() == null || data.salesAmount() == null) {
-                throw new IllegalArgumentException("Base salary and sales amount required");
-            }
-            
-            double base = data.baseSalary();
+
+        // 2. Custom lambda strategy
+        System.out.println("\n--- 3. Tiered Commission ---");
+        Function<PayrollData, Double> tieredCommission = data -> {
             double sales = data.salesAmount();
+            double base = data.baseSalary();
             
-            // Tiered commission: 5% up to $20k, 8% above $20k, 12% above $50k
-            double commission;
-            if (sales <= 20000) {
-                commission = sales * 0.05;
-            } else if (sales <= 50000) {
-                commission = (20000 * 0.05) + ((sales - 20000) * 0.08);
-            } else {
-                commission = (20000 * 0.05) + (30000 * 0.08) + ((sales - 50000) * 0.12);
-            }
+            // 5% up to $20k, 8% above $20k
+            double commission = sales <= 20000 ? 
+                sales * 0.05 : 
+                (20000 * 0.05) + ((sales - 20000) * 0.08);
             
             return base + commission;
         };
-        
-        processor.setCalculator(seniorSalesStrategy, "Senior Sales Rep (Tiered Commission)");
-        var customData = new PayrollData(customEmployee, null, 65000.0, null, null, 50000.0, null);
-        System.out.println(processor.getPayrollSummary(customData));
-        
-        System.out.println("\n--- Strategy Map Example ---");
-        
-        // Show how you might use a Map for strategy selection
-        Map<String, Function<PayrollData, Double>> strategies = Map.of(
-            "HOURLY", PayrollCalculations.HOURLY,
-            "SALARIED", PayrollCalculations.SALARIED,
-            "COMMISSION", PayrollCalculations.COMMISSION,
-            "BASE_PLUS_COMMISSION", PayrollCalculations.BASE_PLUS_COMMISSION,
-            "SENIOR_SALES", seniorSalesStrategy
-        );
-        
-        System.out.println("Available strategies: " + strategies.keySet());
-        
-        // Dynamic strategy selection
-        String strategyType = "SENIOR_SALES";
-        Function<PayrollData, Double> selectedStrategy = strategies.get(strategyType);
-        processor.setCalculator(selectedStrategy, "Dynamically Selected: " + strategyType);
-        
-        var dynamicData = new PayrollData(customEmployee, null, 45000.0, null, null, 55000.0, null);
-        System.out.println("\nDynamic selection result:");
-        System.out.println(processor.getPayrollSummary(dynamicData));
-        
-        System.out.println("\n--- Method Reference Example ---");
-        
-        // You can also use method references as strategies
-        processor.setCalculator(StrategyPatternDemo::consultantRate, "Consultant (Method Reference)");
-        var consultantData = new PayrollData(customEmployee, 35, null, 150.0, null, null, null);
+
+        processor.setCalculator(tieredCommission);
+        var salesData = new PayrollData(salesEmployee, 25000.0, 40000.0, 0.05);
+        System.out.println(processor.getPayrollSummary(salesData));
+
+        // 3. Method reference strategy
+        System.out.println("\n--- 4. Method Reference: Consultant Rate ---");
+        processor.setCalculator(StrategyPatternDemo::calculateConsultantPay);
+        var consultantData = new PayrollData(consultantEmployee, 35, null, 150.0, null, null, null);
         System.out.println(processor.getPayrollSummary(consultantData));
+
+        // 4. Batch processing with strategy map and streams
+        System.out.println("\n--- 5. Batch Processing with Strategy Map ---");
         
-        System.out.println("\n--- Custom Strategy Factory Example ---");
-        
-        // Use the customStrategy factory method for a contractor with special rules
-        Function<PayrollData, Double> contractorStrategy = PayrollCalculations.customStrategy(
-            "Contractor with daily rate and bonus",
-            data -> {
-                if (data.hoursWorked() == null || data.hourlyRate() == null) {
-                    throw new IllegalArgumentException("Hours and daily rate required for contractor");
-                }
-                
-                // Contractor: Paid by full days (8-hour minimum) + bonus for weekend work
-                int hours = data.hoursWorked();
-                double dailyRate = data.hourlyRate(); // Using hourlyRate field as daily rate
-                
-                // Calculate full days (minimum 8 hours = 1 day)
-                int fullDays = Math.max(1, (hours + 7) / 8); // Round up to nearest day
-                double basePay = fullDays * dailyRate;
-                
-                // Weekend bonus: 20% if working more than 5 days (simulating weekend work)
-                if (fullDays > 5) {
-                    basePay *= 1.20; // 20% weekend bonus
-                }
-                
-                return basePay;
-            }
+        // Strategy registry - map employees to their payment strategies
+        Map<String, Function<PayrollData, Double>> employeeStrategies = Map.of(
+            "Alice Johnson", PayrollCalculations.HOURLY,
+            "Bob Smith", PayrollCalculations.SALARIED,
+            "Carol Sales", tieredCommission,
+            "Dave Consultant", StrategyPatternDemo::calculateConsultantPay
         );
         
-        processor.setCalculator(contractorStrategy, "Contractor (Custom Strategy Factory)");
-        var contractorData = new PayrollData(customEmployee, 42, null, 600.0, null, null, null); // 42 hours, $600/day
-        System.out.println(processor.getPayrollSummary(contractorData));
-    }
-    
-    // Example method that can be used as a strategy via method reference
-    public static double consultantRate(PayrollData data) {
-        if (data.hoursWorked() == null || data.hourlyRate() == null) {
-            throw new IllegalArgumentException("Hours and rate required for consultant");
-        }
+        // Create batch of payroll data
+        List<PayrollData> payrollBatch = List.of(
+            new PayrollData(hourlyEmployee, 40, 25.0),           // Alice: 40 hours
+            new PayrollData(salariedEmployee, 80000.0),          // Bob: $80k salary  
+            new PayrollData(salesEmployee, 30000.0, 45000.0, 0.05), // Carol: $30k sales, $45k base
+            new PayrollData(consultantEmployee, 32, null, 175.0, null, null, null) // Dave: 32 hours at $175/hour
+        );
         
-        // Consultants: No overtime, but higher rate
+        // Process all payments in parallel using streams
+        List<Double> payments = payrollBatch.parallelStream()
+            .map(data -> employeeStrategies.get(data.employee().name()).apply(data))
+            .toList();
+        
+        // Display results
+        System.out.println("Batch processing results:");
+        for (int i = 0; i < payrollBatch.size(); i++) {
+            var data = payrollBatch.get(i);
+            var payment = payments.get(i);
+            System.out.printf("  %s: $%.2f%n", data.employee().name(), payment);
+        }
+    }
+
+    // Example method that can be used as a strategy via method reference
+    public static double calculateConsultantPay(PayrollData data) {
+        // Consultants: No overtime, flat hourly rate
         return data.hoursWorked() * data.hourlyRate();
     }
 }
